[gd_scene load_steps=8 format=2]

[ext_resource path="res://Themes/BetScene_Theme.tres" type="Theme" id=1]
[ext_resource path="res://Scenes/UI/Obstawianie.gd" type="Script" id=2]
[ext_resource path="res://Fonts/Pixeled_Font_Titles.tres" type="DynamicFont" id=3]
[ext_resource path="res://Fonts/Pixeled_Font.tres" type="DynamicFont" id=4]
[ext_resource path="res://Sprites/UI/TeamButtonRed.res" type="SpriteFrames" id=5]
[ext_resource path="res://Sprites/UI/TeamButtonBlue.res" type="SpriteFrames" id=6]

[sub_resource type="Theme" id=1]
default_font = ExtResource( 4 )
VBoxContainer/constants/separation = 4

[node name="Obstawianie" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -960.0
margin_top = -540.0
margin_right = 960.0
margin_bottom = 540.0
script = ExtResource( 2 )

[node name="ColorRect_Black" type="ColorRect" parent="."]
modulate = Color( 1, 0, 0, 0.478431 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.00784314, 0.00784314, 0.00784314, 0.611765 )

[node name="Red_Rectangle" type="TextureRect" parent="."]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -960.0

[node name="ColorRect_Blue" type="ColorRect" parent="Red_Rectangle"]
modulate = Color( 1, 0, 0, 0.478431 )
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 51, 246 )
color = Color( 1, 0, 0, 1 )

[node name="Blue_Rectangle" type="TextureRect" parent="."]
anchor_bottom = 1.0
margin_right = 960.0

[node name="ColorRect_Blue" type="ColorRect" parent="Blue_Rectangle"]
modulate = Color( 0.109804, 0.101961, 0.501961, 0.478431 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.137255, 0.0980392, 0.8, 1 )

[node name="Box" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -372.5
margin_top = -225.0
margin_right = 372.5
margin_bottom = 225.0
theme = SubResource( 1 )

[node name="ColorRect" type="ColorRect" parent="Box"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.45098 )

[node name="Confirm" type="Button" parent="Box"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 71.0
margin_top = -110.0
margin_right = 251.0
margin_bottom = -11.0
theme = ExtResource( 1 )
custom_fonts/font = ExtResource( 4 )
text = "CONFIRM"

[node name="Cancel" type="Button" parent="Box"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -240.0
margin_top = -110.0
margin_right = -60.0
margin_bottom = -11.0
rect_rotation = -0.554043
theme = ExtResource( 1 )
custom_fonts/font = ExtResource( 4 )
text = "CANCEL"

[node name="BetSlider" type="HSlider" parent="Box"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -216.5
margin_top = -8.0
margin_right = 228.5
margin_bottom = 48.0
ticks_on_borders = true

[node name="BetLabel" type="Label" parent="Box"]
anchor_right = 1.0
margin_left = 0.5
margin_top = 59.0
margin_right = 0.5
margin_bottom = 506.0
custom_fonts/font = ExtResource( 3 )
text = "$0

"
align = 1

[node name="BtnRed" type="Button" parent="."]
margin_left = 1443.0
margin_top = 150.0
margin_right = 1841.0
margin_bottom = 280.0
custom_fonts/font = ExtResource( 4 )
text = "RED"

[node name="BtnRedAnim" type="AnimatedSprite" parent="BtnRed"]
position = Vector2( 186.5, 62 )
scale = Vector2( 4.83654, 5.61142 )
frames = ExtResource( 5 )
animation = "Default"
playing = true

[node name="BtnBlue" type="Button" parent="."]
margin_left = 108.0
margin_top = 150.0
margin_right = 506.0
margin_bottom = 280.0
custom_fonts/font = ExtResource( 4 )
text = "BLUE"

[node name="BtnBlueAnim" type="AnimatedSprite" parent="BtnBlue"]
position = Vector2( 186, 62 )
scale = Vector2( 4.85226, 5.61277 )
frames = ExtResource( 6 )
animation = "Default"
playing = true

[node name="BetLabel_Message" type="Label" parent="."]
anchor_right = 1.0
margin_top = 374.0
margin_bottom = 521.0
custom_fonts/font = ExtResource( 3 )
text = "MAKE  A  BET !"
align = 1

[node name="TeamLabel" type="Label" parent="."]
margin_left = 281.0
margin_top = 832.0
margin_right = 1623.0
margin_bottom = 1100.0
custom_fonts/font = ExtResource( 3 )

[connection signal="pressed" from="Box/Confirm" to="." method="_on_Confirm_pressed"]
[connection signal="pressed" from="Box/Cancel" to="." method="_on_Cancel_pressed"]
[connection signal="value_changed" from="Box/BetSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="mouse_entered" from="BtnRed" to="." method="_on_BtnRed_mouse_entered"]
[connection signal="mouse_exited" from="BtnRed" to="." method="_on_BtnRed_mouse_exited"]
[connection signal="pressed" from="BtnRed" to="." method="_on_BtnRed_pressed"]
[connection signal="mouse_entered" from="BtnBlue" to="." method="_on_BtnBlue_mouse_entered"]
[connection signal="mouse_exited" from="BtnBlue" to="." method="_on_BtnBlue_mouse_exited"]
[connection signal="pressed" from="BtnBlue" to="." method="_on_BtnBlue_pressed"]
